All tests pass on jdk-16