@@ -15,7 +15,6 @@
                  [techascent/tech.resource         "5.02"]
                  [techascent/tech.jna "4.05" :scope "provided"]]
   :java-source-paths ["java"]
-  :javac-options ["--add-modules" "jdk.incubator.foreign"]
   :jvm-opts ["--add-modules" "jdk.incubator.foreign" "-Dforeign.restricted=permit"]
   :source-paths ["src" "src_jdk_16"]
   :profiles {:dev
